sample/asm/errors/halt_as_last_instruction.asm
.function: main/1
    izero 0
    halt
.end
